scrape is functional

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,6 @@
 
 <div id="noteDiv">
     {{#each Note}}
-    <!--  not sure on how to do this part -->
-        {{> articles/article-block _id=}}
+    <!--  not sure on how to do this part...if it's even necessary??? -->
+        {{!-- {{> articles/article-block _id=}} --}}
 </div>
