wrote logic for buttons, index pg displaying articles w/functional links & photos

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,12 +2,10 @@
 
 <h2>News to make you smile... and LAUGH!</h2>
 
-<ul>
+{{!-- <button id="scraper">Show me the happy news!</button> --}}
+
+<ul id="articles">
     {{#each Article}}
+    {{/each}}
 </ul>
 
-<div id="noteDiv">
-    {{#each Note}}
-    <!--  not sure on how to do this part...if it's even necessary??? -->
-        {{!-- {{> articles/article-block _id=}} --}}
-</div>
