--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="/styles.css" media="screen" title="no title" charset="utf-8">
   <title>Home Page</title>
   <script src="https://code.jquery.com/jquery.js"></script>
-  <!-- remove "public"??? -->
-  <script src="../../public/app.js"></script>
+  <script src="/app.js"></script>
 </head>
 
 <body>
