--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,7 @@
     <h1>Good News Network Scraper</h1>
     <h2>News to make you smile... and LAUGH!</h2>
 </div>
+<img id="sun" src="/images/sun.png">
 
 {{!-- <button id="scraper">Show me the happy news!</button> --}}
 <div>
